# RocketTickets

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/prax/: config.py  database.py  exceptions.py  main.py
backend/prax/models/: __init__.py  anotacao.py  note.py  procedure.py  sla.py  ticket.py  wscan.py
backend/prax/routers/: anotacao.py  clients.py  notes.py  procedures.py  sla.py  sync.py  tickets.py  user.py
backend/prax/schemas/: anotacao.py  note.py  procedure.py  sla.py  ticket.py
backend/prax/scraper/: auth.py  client.py  messages.py  tickets.py
backend/prax/services/: sla.py  sync.py
backend/tests/: conftest.py  test_api.py
desktop/: README.md  auth.py  launcher.py  login.py  prax.spec  reset_password.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js
frontend/src/components/: CreateTicket.jsx  RegistrarAtendimento.jsx  SLADashboard.jsx  ThemeToggle.jsx  TicketDetail.jsx  TicketList.jsx  UserProfile.jsx
